--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.2.0",
   "description": "Bundle CommonJS modules with gobble and Browserify",
   "author": "Rich Harris",
+  "license": "MIT",
+  "repository": "https://github.com/gobblejs/gobble-browserify",
   "dependencies": {
     "browserify": "^5.11.2",
     "sander": "^0.1.6"
